# jsonformer

./: Jsonformer_example.ipynb  example.ipynb  pyproject.toml
.github/workflows/: examples_check.yml  release.yml
